refactoring to match newest hklib version